# DiffCatcher

./: .gitignore  CHANGELOG.md  Cargo.toml  Plan.md  README.md  Roadmap.md
.github/workflows/: ci.yml  deploy-presentation.yml  release.yml
benches/: core_bench.rs
presentation/: index.html
scripts/: e2e_validate.sh  perf_50_repos.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  processor.rs  progress.rs  scanner.rs  types.rs
src/extraction/: boundary.rs  classifier.rs  elements.rs  mod.rs  parser.rs  plugins.rs  snippets.rs
src/extraction/languages/: c_cpp.rs  config.rs  fallback.rs  go.rs  java_kotlin.rs  javascript.rs  mod.rs  python.rs  ruby.rs  rust.rs
src/git/: commands.rs  diff.rs  file_retrieval.rs  mod.rs  state.rs
src/report/: json.rs  markdown.rs  mod.rs  sarif.rs  snippet_writer.rs  text.rs  writer.rs
src/security/: custom.rs  mod.rs  overview.rs  patterns.rs  tagger.rs
tasks/: lessons.md  todo.md
tests/: basic.rs  boundary_detection.rs  cli_flags.rs  config_file.rs  diff_generation.rs  diff_parser.rs  edge_cases.rs  golden_extraction.rs  integration_reports.rs  plugin_extractors.rs  report_writer.rs  security_golden.rs  security_plugins.rs  security_tagger.rs  snippet_fallback.rs  state_capture_integration.rs
